utopia-meta/utopia-firewall-base/rules.v6
*filter

# Allow loopback traffic
-A INPUT -i lo -j ACCEPT
-A INPUT -s fe80::/10 -j ACCEPT

# Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow all outbound traffic
-A OUTPUT -j ACCEPT

# Allow HTTP and HTTPS.
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -p tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp --dport 8443 -j ACCEPT

# Allow IRC ports
#-A INPUT -p tcp --dport 6667:6669 -j ACCEPT
#-A INPUT -p tcp --dport 6697:6699 -j ACCEPT
#-A INPUT -p tcp --dport 7001 -j ACCEPT
#-A INPUT -p tcp --dport 9998:9999 -j ACCEPT
#-A INPUT -p tcp --dport 16697 -j ACCEPT

# Block identd with a REJECT, so we don't get stuck "Checking Ident"
-A INPUT -p tcp --dport 113 -j REJECT

# Allow SSH connections
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# rsync daemon
#-A INPUT -p tcp --dport 873 -j ACCEPT

# Allow ping/traceroute (v6)
-A INPUT -p icmp -j ACCEPT
-A INPUT -p udp --dport 33441:33500 -j ACCEPT

# Log iptables denials
-A INPUT -m limit --limit 15/min -j LOG --log-prefix "ip6tables denied: " --log-level 4

# Drop all other inbound
-A INPUT -j DROP
-A FORWARD -j DROP

COMMIT
